--- a/Module 7/7 Gibbs Samplers.Rmd
+++ b/Module 7/7 Gibbs Samplers.Rmd
@@ -1,10 +1,9 @@
 ---
 title: "Gibbs Samplers"
 author: "Jonathan Navarrete"
-date: "September 2, 2017"
+date: " "
 output:   
   ioslides_presentation:
-    theme: simplex
     smaller: true
     wide: true
     css: slides.css
@@ -31,23 +30,26 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 
 Now that we've familiarized ourselves with MCMC and the Metropolis-Hastings algorithms, we begin to analyze a now-common MCMC algorithm called Gibbs sampler. The Gibbs sampler is in fact a special case of the Metropolis-Hastings algorithm for high dimensional target distributions.
 
+Recommended reading: [Explaining the Gibbs Sampler](http://biostat.jhsph.edu/~mmccall/articles/casella_1992.pdf)
+
 
 ## Two-stage Gibbs sampler algorithm { .selectable }
 
-We introduce the Gibbs sampler with  a two-stage example. The **two-stage Gibbs sampler algorithm** as described Robert & Casella goes as follows
+The *two-stage* Gibbs sampler creates a Markov chain from a joint distribution in the following way. If two random variables $X$ and $Y$ have joint density $f(x,y)$, with corresponding conditional densities $f_{Y|X}$ and $f_{X|Y}$, the two stage Gibbs sampler generates a Markov chain $(X_t, y_i)$ by generating $y_i$ from conditional density $f_{Y|X}$ and then generating $X_t$ from conditional density $f_{X|Y}$.
+
+The **two-stage Gibbs sampler algorithm** as described Robert & Casella goes as follows
 
 
 `Take` $X_0 = x_0$ 
 
 For $t = 1, 2, ...$, `generate`
 
-\begin{enumerate}
-\item $y_i \sim f_{Y|X}(\cdot | x_{t-1})$
-\item $X_t \sim f_{X| Y}(\cdot | y_{t})$
-\end{enumerate}
+`1.` $y_i \sim f_{Y|X}(\cdot | x_{t-1})$
+
+`2.` $X_t \sim f_{X| Y}(\cdot | y_{t})$
 
 
-The *two-stage* Gibbs sampler creates a Markov chain from a joint distribution in the following way. If two random variables $X$ and $Y$ have joint density $f(x,y)$, with corresponding conditional densities $f_{Y|X}$ and $f_{X|Y}$, the two stage Gibbs sampler generates a Markov chain $(X_t, y_i)$ by generating $y_i$ from conditional density $f_{Y|X}$ and then generating $X_t$ from conditional density $f_{X|Y}$.
+
 
 
 ## Bivariate Normal Example { .selectable }
@@ -82,13 +84,14 @@ $$
 
 $\rho$ is the correlation between $X$ and $Y$, and $(1 - \rho^2) \sigma_X^2$ is the variance.
 
+[Multivariate Normal Distribution](http://www.randomservices.org/random/special/MultiNormal.html)
+
 
 ## Bivariate Normal Example { .selectable }
 
 
 ```{r}
-N = 10000
-
+N = 100000
 rho = 0.9
 mu_x = 1
 mu_y = 2
@@ -167,28 +170,28 @@ $$
 Therefore, we follow an iterative algorithm of 
 $$
 X_i \sim f(x | \theta) \\
-Y_{i+1} \sim f(y | X_i = x_i)
+\theta_{i+1} \sim f(\theta | X_i = x_i)
 $$
 
 ## Beta-Binomial revisited { .selectable }
 
 ```{r}
-
-N = 10^5
 n = 16
 a = 2
 b = 4
 X = numeric(N)
-Y = numeric(N)
+thetas = numeric(N)
 
-## initial values
-X[1] = 0.2
-Y[1] = 0.34 ## theta values
+X[1] = runif(1) ## initial values
+thetas[1] = runif(1) ## theta values
 
 for(i in 1:N){
-  X[i+1] = rbinom(n = 1, size = n, prob = Y[i])
-  Y[i+1] = rbeta(1, a + X[i+1], n - X[i+1]+b)
+  X[i+1] = rbinom(n = 1, size = n, prob = thetas[i])
+  thetas[i+1] = rbeta(1, a + X[i+1], n - X[i+1]+b)
 }
+
+quantile(X)
+quantile(thetas)
 
 ```
 
@@ -199,7 +202,7 @@ for(i in 1:N){
 
 par(mfrow = c(1,2))
 hist(X, main = "Marginal Dist: X", probability = TRUE)
-hist(Y, main = "Marginal Dist: X", probability = TRUE)
+hist(thetas, main = paste("Marginal Dist:", expression(theta)), probability = TRUE)
 
 ```
 
@@ -215,7 +218,7 @@ $$
 X_i | x_1, ..., x_{i-1}, x_{i+1}, ..., x_{p} \sim f(x_i | x_1, ..., x_{i-1}, x_{i+1}, ..., x_{p})
 $$
 
-for $i$ in 1, 2, ..., $p$. THe associated Gibbs sampler is giben as
+for $i$ in 1, 2, ..., $p$. THe associated Gibbs sampler is given as
 
 
 ## The multistage Gibbs sampler { .selectable }
@@ -223,10 +226,12 @@ for $i$ in 1, 2, ..., $p$. THe associated Gibbs sampler is giben as
 At iteration $t =  1, 2, ...$, given $\mathbf{x^{(t)}} = (x^{(1)}, ..., x^{(p)})$, generate
 
 
-1. $X_1^{(t+1)} \sim f_1(x_1 | x_2^{(t)}, ..., x_p^{(t)})$
-2.  $X_2^{(t+1)} \sim f_2(x_2 | x_1^{(t+1)}, x_3^{(t)} ..., x_p^{(t)})$
+`1.` $X_1^{(t+1)} \sim f_1(x_1 | x_2^{(t)}, ..., x_p^{(t)})$
+
+`2.`  $X_2^{(t+1)} \sim f_2(x_2 | x_1^{(t+1)}, x_3^{(t)} ..., x_p^{(t)})$\
 ...
-p. $X_p^{(t+1)} \sim f_p(x_p | x_1^{(t+1)}, ..., x_{p-1}^{(t+1)})$.
+
+`p.` $X_p^{(t+1)} \sim f_p(x_p | x_1^{(t+1)}, ..., x_{p-1}^{(t+1)})$.
 
 The densities $f_1, ..., f_p$ are called the *full conditionals*, and a particular feature of teh Gibbs sampler is that these are the only densities used for simulation. Thus, even in a high-dimensional problem, all of the simulations *may* be univariate, which can be a huge advantage!
 
@@ -236,31 +241,29 @@ The densities $f_1, ..., f_p$ are called the *full conditionals*, and a particul
 
 
 Let's try to model a more interesting example, a time series of recorded coal mining disasters in the UK from 1851 to 1962, for $n = 111$ years of data. 
-This analysis will follow the analysis layed out by Carlin et al in *Hierarchical Bayesian Analysis of Changepoint Problems*. 
+This analysis will follow the analysis layed out by Carlin et al in [Hierarchical Bayesian Analysis of Changepoint Problems](http://www.webpages.uidaho.edu/~stevel/565/literature/bayes_changepoint_poisson_1.pdf). 
 Occurrences of disasters in the time series is thought to be derived from a Poisson process with a drop rate parameter in the later part of the time series. We are interested in locating the change point, $k$, in the series.
 
+
+
+[Change Point Detection](https://en.wikipedia.org/wiki/Change_detection)
 
 
 
 ## Bayesian Change-Point Analysis { .selectable }
 
 
-```{r}
-
-data_vector = c(4, 5, 4, 0, 1, 4, 3, 4, 0, 6, 3, 3, 4, 0, 2, 6,
-                    3, 3, 5, 4, 5, 3, 1, 4, 4, 1, 5, 5, 3, 4, 2, 5,
-                    2, 2, 3, 4, 2, 1, 3, 2, 2, 1, 1, 1, 1, 3, 0, 0,
-                    1, 0, 1, 1, 0, 0, 3, 1, 0, 3, 2, 2, 0, 1, 1, 1,
-                    0, 1, 0, 1, 0, 0, 0, 2, 1, 0, 0, 0, 1, 1, 0, 2,
-                    3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 4, 2, 0, 0, 1, 4,
-                    0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1)
+```{r, fig.height=3, fig.width=5}
+data_vector = c(4, 5, 4, 0, 1, 4, 3, 4, 0, 6, 3, 3, 4, 0, 2, 6, 
+                3, 3, 5, 4, 5, 3, 1, 4, 4, 1, 5, 5, 3, 4, 2, 5,
+                2, 2, 3, 4, 2, 1, 3, 2, 2, 1, 1, 1, 1, 3, 0, 0, 
+                1, 0, 1, 1, 0, 0, 3, 1, 0, 3, 2, 2, 0, 1, 1, 1,
+                0, 1, 0, 1, 0, 0, 0, 2, 1, 0, 0, 0, 1, 1, 0, 2, 
+                3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 4, 2, 0, 0, 1, 4,
+                0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1)
 n = length(data_vector)
-
 disasters = ts(data_vector, freq=1, start = 1851)
-
-plot(disasters, type = "o", lty = 2)
-
-plot(disasters, type = "h", lty = 6, lwd = 2)
+plot(disasters, type = "h", lty = 6, lwd = 2, main = "Coal Mining Disasters", xlab = "Year", ylab = "Disasters")
 
 ```
 
@@ -381,14 +384,14 @@ n <- length(y) #length of the data
 m <- 10^4 #length of the chain
 
 ## vectors to hold data
-mu <- numeric(m) 
+theta <- numeric(m) 
 lambda <- numeric(m) 
 k <- numeric(m)
 L <- numeric(n)
 
 ## initial values
 k[1] <- sample(1:n, 1) ## change-points
-mu[1] <- 1
+theta[1] <- 1
 lambda[1] <- 1
 a = 0.5
 b1 <- 1
@@ -407,7 +410,7 @@ The algorithm explained by Carlin et al is simple. For $t \in \{1, 2, ..., m \}$
 
 3. Sample $\displaystyle b_1 \sim Gamma(a_1 + c_1, (\theta_t + d_1))$
 
-4. Sample $\displaystyle b_1 \sim Gamma(a_2 + c_2, (\lambda_t + d_2))$
+4. Sample $\displaystyle b_2 \sim Gamma(a_2 + c_2, (\lambda_t + d_2))$
 
 5. For $j \in {1, ..., n}$ calculate $L(\mathbf{y} | \theta, \lambda, b_1, b_2)$, from there you'll obtain $p(k | \mathbf{y}, \theta, \lambda, b_1, b_2)$
 
@@ -422,9 +425,9 @@ The algorithm explained by Carlin et al is simple. For $t \in \{1, 2, ..., m \}$
 # run the Gibbs sampler
 for (t in 2:m){
     kt <- k[t-1]
-    #generate mu
+    #generate theta
     r <- a + sum(y[1:kt])
-    mu[t] <- rgamma(1, shape = r, rate = kt + b1)
+    theta[t] <- rgamma(1, shape = r, rate = kt + b1)
     #generate lambda
     if (kt + 1 > n){ 
       r <- a + sum(y) 
@@ -433,15 +436,13 @@ for (t in 2:m){
       }
     lambda[t] <- rgamma(1, shape = r, rate = n - kt + b2)
     #generate b1 and b2
-    b1 <- rgamma(1, shape = a, rate = mu[t]+1)
+    b1 <- rgamma(1, shape = a, rate = theta[t]+1)
     b2 <- rgamma(1, shape = a, rate = lambda[t]+1)
 
-
     for (j in 1:n) {
-        L[j] <- exp((lambda[t] - mu[t]) * j) * 
-                (mu[t] / lambda[t])^sum(y[1:j])
+        L[j] <- exp((lambda[t] - theta[t]) * j) * 
+                (theta[t] / lambda[t])^sum(y[1:j])
     }
-
     L <- L / sum(L)
     #generate k from discrete distribution L on 1:n
     k[t] <- sample(1:n, prob=L, size=1)
@@ -482,9 +483,10 @@ lines(1:length(K), cumsum(K) / (1:length(K)))
 
 
 ## Implementing Gibbs sampling  { .selectable }
+
 ```{r}
 print(mean(lambda[burn_in:m])) #[1] 0.9341033
-print(mean(mu[burn_in:m])) #[1] 3.108575
+print(mean(theta[burn_in:m])) #[1] 3.108575
 
 ```
 
@@ -493,15 +495,13 @@ print(mean(mu[burn_in:m])) #[1] 3.108575
 ## Implementing Gibbs sampling  { .selectable }
 
 ```{r, echo=FALSE, fig.height=4}
-
-
 ## Code for Figure 9.12 on page 276
 # histograms from the Gibbs sampler output
 par(mfrow=c(1,3))
 
-hist(mu[burn_in:m], main="", xlab = expression(mu), 
+hist(theta[burn_in:m], main="", xlab = expression(theta), 
      col="gray", border="white",
-     breaks = "scott", prob=TRUE) #mu posterior
+     breaks = "scott", prob=TRUE) #theta posterior
 
 hist(lambda[burn_in:m], main="", xlab = expression(lambda),
      col="gray", border="white",
@@ -510,10 +510,6 @@ hist(lambda[burn_in:m], main="", xlab = expression(lambda),
 hist(K, breaks=min(K):max(K), prob=TRUE, main="",
      col="gray", border="white",
      xlab = "k")
-
-par(mfcol=c(1,1), ask=FALSE) #restore display
-
-
 
 ```
 
@@ -527,7 +523,7 @@ Our analysis can be used to justify that the change point occurs at some range a
 
 ```{r, eval=FALSE}
 
-hist(mu[burn_in:m], main="", xlab = expression(mu), 
+hist(theta[burn_in:m], main="", xlab = expression(mu), 
      col="gray", border="white",
      breaks = "scott", prob=TRUE) #mu posterior
 
